@@ -82,6 +82,7 @@ BOOL CManilla2DConfigAboutDlg::OnInitDialog()
     m_donatorsListBox.AddString(TEXT("Jaxboater - $$$"));
     m_donatorsListBox.AddString(TEXT("RaNg3r - $$$"));
     m_donatorsListBox.AddString(TEXT("scrosler - $$$"));
+    m_donatorsListBox.AddString(TEXT("Pablo Villasuso - $$$"));
     m_donatorsListBox.AddString(TEXT("..."));
     m_donatorsListBox.AddString(TEXT("<your name here for a donation of $1 or more>"));
 
