@@ -34,6 +34,7 @@ CManilla2DConfigThemePartsDlg::CManilla2DConfigThemePartsDlg(CWnd* pParent)
 : CManilla2DConfigAbstractDlg(pParent, CManilla2DConfigThemePartsDlg::IDD, CManilla2DConfigThemePartsDlg::IDS_TAB, CManilla2DConfigThemePartsDlg::IDS_TITLE, true)
 {
     m_bDoUpdateWeather = true;
+    m_bDoUpdateTabIcons = true;
 }
 
 CManilla2DConfigThemePartsDlg::~CManilla2DConfigThemePartsDlg()
@@ -44,6 +45,7 @@ void CManilla2DConfigThemePartsDlg::DoDataExchange(CDataExchange* pDX)
 {
     CDialog::DoDataExchange(pDX);
     DDX_Control(pDX, IDC_NO_WEATHER_CHECK, m_noWeatherCheck);
+    DDX_Control(pDX, IDC_NO_TABICONS_CHECK, m_noTabIconsCheck);
 }
 
 BEGIN_MESSAGE_MAP(CManilla2DConfigThemePartsDlg, CManilla2DConfigAbstractDlg)
@@ -62,6 +64,7 @@ BOOL CManilla2DConfigThemePartsDlg::OnInitDialog()
 void CManilla2DConfigThemePartsDlg::OnOK()
 {
     m_bDoUpdateWeather = (m_noWeatherCheck.GetCheck() == BST_UNCHECKED);
+    m_bDoUpdateTabIcons = (m_noTabIconsCheck.GetCheck() == BST_UNCHECKED);
     CDialog::OnOK();
 }
 
@@ -73,4 +76,9 @@ void CManilla2DConfigThemePartsDlg::OnCancel()
 bool CManilla2DConfigThemePartsDlg::DoUpdateWeather()
 {
     return m_bDoUpdateWeather;
+}
+
+bool CManilla2DConfigThemePartsDlg::DoUpdateTabIcons()
+{
+    return m_bDoUpdateTabIcons;
 }
