@@ -114,10 +114,10 @@
 #define IDC_INTERNET_BROWSER_EDIT       1070
 #define IDC_INTERNET_DEFAULT_BUTTON     1071
 #define IDC_BACKGROUND_PATH_EDIT        1072
-#define IDC_BACKGROUND_PATH_BROWSE_BTN  1074
-#define IDC_BACKGROUND_PATH_CLEAR_BTN   1075
-#define IDC_CHECK1                      1076
-#define IDC_NO_WEATHER_CHECK            1076
+#define IDC_BACKGROUND_PATH_BROWSE_BTN  1073
+#define IDC_BACKGROUND_PATH_CLEAR_BTN   1074
+#define IDC_NO_WEATHER_CHECK            1075
+#define IDC_NO_TABICONS_CHECK           1076
 #define ID_RESTORE_DEFAULTS             32771
 #define IDT_M2DC_PROGRESS_TIMER         32772
 
